Final rough draft of milestone capstone report

--- a/Capstone Report.Rmd
+++ b/Capstone Report.Rmd
@@ -3,8 +3,8 @@ title: "FBI Crime Capstone Project Milestone Report"
 author: "Ankita Hanmiah"
 date: "February 7, 2019"
 output:
+  html_document: default
   pdf_document: default
-  word_document: default
 ---
 
 ###Introduction
@@ -105,9 +105,14 @@ ggplot() +
   coord_map() + labs(x = NULL, y = NULL, title = "Rate of Property Crime by State, 2017") +
   theme(axis.ticks = element_blank(), axis.text = element_blank(), panel.background = element_blank(), panel.border = element_blank())
 ```
-These maps of generalized violent and property crime show that New Mexico and Alaska seem to have the highest rates of both violent and property crime. It can also be seen by the difference in scale and in the coloring that there are higher rates of property crime than violent and property crime is more highly widespread across the states than violent crime. Property crime seems to be most prevalent in the southern and western states, with the least amount in the northeast and parts of the midwest and mountain region, whereas violent crime is most prevalent in New Mexico, Alaska, and Tennesee, with mid to low rates across the rest of the states. 
+One of the trends that can be seen by looking at these maps is that there is a higher prevalence of property crime throughout the United States as compared to violent crime. While the scale of violent crime rates per 100,000 is from below 250 to over 1000, the scale for property crime rates per 100,000 is from below 2000 to over 4000. 
 
-```{r CrimeMaps, warning = FALSE, message = FALSE}
+These maps of generalized violent and property crime show that New Mexico and Alaska seem to have the highest rates of both violent and property crime. It can also be seen by the difference in scale and in the coloring that there are higher rates of property crime than violent and property crime is more highly widespread across the states than violent crime. Property crime seems to be most prevalent in the southern and western states, with the least amount in the northeast and parts of the midwest and mountain region, whereas violent crime is most prevalent in New Mexico, Alaska, and Tennessee, with mid to low rates across the rest of the states. 
+
+The following maps depict the distribution of the individual criminal offenses throughout the states. Glancing at the rate scales, it can be seen that larceny seems to have a highest prevalence with rates in the thousands. 
+
+For property crimes:
+```{r, warning = FALSE, message = FALSE}
 
 ggplot() + 
   geom_map(aes(x = long, y = lat, map_id = id), data = fifty_states, map = fifty_states, size = 0.15) +
@@ -115,67 +120,75 @@ ggplot() +
  scale_fill_gradient2(name = "Rate Per 100,000", low = "black", mid = "black", high = "#55FFFF") +
   coord_map() + labs(x = NULL, y = NULL, title = "Rate of Burglary by State, 2017") +
   theme(axis.ticks = element_blank(), axis.text = element_blank(), panel.background = element_blank(), panel.border = element_blank())
+```
 
+Burglary shows high rates throughout the south, ranging from 500 to over 800 cases per 100,000, with the most highlighted states being New Mexico and Mississippi, followed by states like Oklahoma, Arkansas, and Louisiana. The lowest rates of burglary (ranging from below 200 to 250 per 100,000) seem to be in New York, New Hampshire, and Virginia.
+
+```{r}
 ggplot() + 
   geom_map(aes(x = long, y = lat, map_id = id), data = fifty_states, map = fifty_states, size = 0.15) + 
   geom_map(aes(fill = Larceny, map_id = State), map = fifty_states, data = FBICrime, color = "grey40", size = 0.15) + 
   scale_fill_gradient2(name = "Rate Per 100,000", low = "black", mid = "black", high = "#55FFFF") +
   coord_map() + labs(x = NULL, y = NULL, title = "Rate of Larceny by State, 2017") +
   theme(axis.ticks = element_blank(), axis.text = element_blank(), panel.background = element_blank(), panel.border = element_blank())
+```
 
+Larceny seems to show highest rates (2500 to 3500 per 100,000) in New Mexico, Louisiana, South Dakota, and Alaska but is fairly widespread throughout the United States and seems to be the most prevalent of the individual criminal offenses reported to the FBI. The lowest rates (below 1500 per 100,000) seem to be found in parts of New England/northeast regions, parts of the midwest (such as Wisconsin and Michigan), and Idaho.
+
+```{r}
 ggplot() + 
   geom_map(aes(x = long, y = lat, map_id = id), data = fifty_states, map = fifty_states, size = 0.15) + 
   geom_map(aes(fill = Motor.Vehicle.Theft, map_id = State), map =fifty_states, data = FBICrime, color = "grey40", size = 0.15) + 
   scale_fill_gradient2(name = "Rate Per 100,000", low = "black", mid = "black", high = "#55FFFF") +
   coord_map() + labs(x = NULL, y = NULL, title = "Rate of Motor Vehicle Theft by State, 2017") +
   theme(axis.ticks = element_blank(), axis.text = element_blank(), panel.background = element_blank(), panel.border = element_blank())
+```
 
+Motor vehicle theft seems to be most prevalent in New Mexico and Alaska (with rates over 500 per 100,000), followed by the west coast states (Washington, Oregon, California) in the 400 to 500 range, as well as Nevada and Colorado. The lowest rates (below 100) look to be in the New England/northeast states (Maine, New Hampshire, Vermont, New York, and Pennsylvania.
+
+For violent crimes:
+
+```{r}
 ggplot() + 
   geom_map(aes(x = long, y = lat, map_id = id), data = fifty_states, map = fifty_states, size = 0.15) + 
   geom_map(aes(fill = Aggravated.Assault, map_id = State), map = fifty_states, data = FBICrime, color = "grey40", size = 0.15) + 
   scale_fill_gradient2(name = "Rate Per 100,000", low = "black", mid = "black", high = "#55FFFF") +
   coord_map() + labs(x = NULL, y = NULL, title = "Rate of Aggravated Assault by State, 2017") +
   theme(axis.ticks = element_blank(), axis.text = element_blank(), panel.background = element_blank(), panel.border = element_blank())
+```
 
+Aggravated assault seems to show its highest rates of over 500 cases per 100,000 in New Mexico, Alaska, and Tennessee, followed by 400 to 500 rates in Arkansas, Louisiana, Missouri, Alabama, South Carolina, and South Dakota. The lowest prevalence (below 100) seems to be in Maine, followed by 100 to 200 per 100,000 rates in New Hampshire, Vermont, Connecticut, New Jersey, Virginia, Kentucky, Ohio, Minnesota, and Utah.
+
+```{r}
 ggplot() + 
   geom_map(aes(x = long, y = lat, map_id = id), data = fifty_states, map = fifty_states, size = 0.15) + 
   geom_map(aes(fill = Murder, map_id = State), map = fifty_states, data = FBICrime, color = "grey40", size = 0.15) + 
   scale_fill_gradient2(name = "Rate Per 100,000", low = "black", mid = "black", high = "#55FFFF") +
   coord_map() + labs(x = NULL, y = NULL, title = "Rate of Murder by State, 2017") +
   theme(axis.ticks = element_blank(), axis.text = element_blank(), panel.background = element_blank(), panel.border = element_blank())
+```
 
+Murder seemes to be the least prevalent crime reported to the FBI with the lowest of crime rates at a range of 0 to over 16 cases per 100,000 people, showing mostly mid to low rates (from 0 to 12) throughout the United States. The higher murder rates are found in Louisiana, Nevada, Missouri, and Maryland. The lowest rates below 4 are seen in the New England/northeast region along with Hawaii, and states in the northern midwest and northwest such as Minnesota, North Dakota, Nebraska, Idaho, and Utah. 
+
+```{r}
 ggplot() + 
   geom_map(aes(x = long, y = lat, map_id = id), data = fifty_states, map = fifty_states, size = 0.15) + 
   geom_map(aes(fill = Rape, map_id = State), map = fifty_states, data = FBICrime, color = "grey40", size = 0.15) + 
  scale_fill_gradient2(name = "Rate Per 100,000", low = "black", mid = "black", high = "#55FFFF") +
   coord_map() + labs(x = NULL, y = NULL, title = "Rate of Rape by State, 2017") +
   theme(axis.ticks = element_blank(), axis.text = element_blank(), panel.background = element_blank(), panel.border = element_blank())
+```
 
+Rape shows highest prevalence rating over 100 per 100,000 in Alaska. Most other states show middle range rates (between 40 to 90 per 100,000) except for Connecticut and New Jersey, which stand out as the lowest rated states below 20, followed by Georgia and North Carolina in the 20 to 40 range.
+
+```{r}
 ggplot() + 
   geom_map(aes(x = long, y = lat, map_id = id), data = fifty_states, map = fifty_states, size = 0.15) +
   geom_map(aes(fill = Robbery, map_id = State), map = fifty_states, data = FBICrime, color = "grey40", size = 0.15) + 
   scale_fill_gradient2(name = "Rate Per 100,000", low = "black", mid = "black", high = "#55FFFF") +
   coord_map() + labs(x = NULL, y = NULL, title = "Rate of Robbery by State, 2017") +
   theme(axis.ticks = element_blank(), axis.text = element_blank(), panel.background = element_blank(), panel.border = element_blank())
-
 ```
-These maps depict the distribution of the individual criminal offenses throughout the states. Glancing at the rate scales, it can be seen that larceny seems to have a highest prevalence with rates in the thousands. 
-
-For property crimes:
-
-Burglary shows high rates throughout the south, ranging from 500 to over 800 cases per 100,000, with the most highlighted states being New Mexico and Mississippi, followed by states like Oklahoma, Arkansas, and Louisiana. The lowest rates of burglary (ranging from below 200 to 250 per 100,000) seem to be in New York, New Hampshire, and Virginia.
-
-Larceny seems to show highest rates (2500 to 3500 per 100,000) in New Mexico, Louisiana, South Dakota, and Alaska but is fairly widespread throughout the United States and seems to be the most prevalent of the individual criminal offenses reported to the FBI. The lowest rates (below 1500 per 100,000) seem to be found in parts of New England/northeast regions, parts of the midwest (such as Wisconsin and Michigan), and Idaho.
-
-Motor vehicle theft seems to be most prevalent in New Mexico and Alaska (with rates over 500 per 100,000), followed by the west coast states (Washington, Oregon, California) in the 400 to 500 range, as well as Nevada and Colorado. The lowest rates (below 100) look to be in the New England/northeast states (Maine, New Hampshire, Vermont, New York, and Pennsylvania.
-
-For violent crimes:
-
-Aggravated assault seems to show its highest rates of over 500 cases per 100,000 in New Mexico, Alaska, and Tennessee, followed by 400 to 500 rates in Arkansas, Louisiana, Missouri, Alabama, South Carolina, and South Dakota. The lowest prevalence (below 100) seems to be in Maine, followed by 100 to 200 per 100,000 rates in New Hampshire, Vermont, Connecticut, New Jersey, Virginia, Kentucky, Ohio, Minnesota, and Utah.
-
-Murder seemes to be the least prevalent crime reported to the FBI with the lowest of crime rates at a range of 0 to over 16 cases per 100,000 people, showing mostly mid to low rates (from 0 to 12) throughout the United States. The higher murder rates are found in Louisiana, Nevada, Missouri, and Maryland. The lowest rates below 4 are seen in the New England/northeast region along with Hawaii, and states in the northern midwest and northwest such as Minnesota, North Dakota, Nebraska, Idaho, and Utah. 
-
-Rape shows highest prevalence rating over 100 per 100,000 in Alaska. Most other states show middle range rates (between 40 to 90 per 100,000) except for Connecticut and New Jersey, which stand out as the lowest rated states below 20, followed by Georgia and North Carolina in the 20 to 40 range.
 
 Robbery is fairly low on its scale throughout the United States with rates below 150 except for states like Nevada, New Mexico, Maryland, and Illinois where you can probably find rates over 200.
 
